--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="container">
-        <div class="initial-container" id="computer">
+        <div id="computer">
             <article class="animate-appear-ltr">
                 <section >
                     <iframe src="https://www.youtube.com/embed/Cu3R5it4cQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
